# Study.Poetry-FastAPI-Docker

./: .dockerignore  DockerFile  README.md  main.py  pyproject.toml  requirements.txt
