[tool.poetry]
name = "study-poetry-fastapi-docker"
version = "0.1.0"
description = ""
authors = ["404Vector-mac <tiryul@gmail.com>"]
readme = "README.md"
packages = [{include = "study"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.86.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
